--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,8 @@
  */
 
 /* You can override the default Infima variables here. */
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+
 :root {
   --ifm-color-primary: #25c2a0;
   --ifm-color-primary-dark: rgb(33, 175, 144);
@@ -23,6 +25,10 @@
   padding: 0 var(--ifm-pre-padding);
 }
 
-html[data-theme='dark'] .docusaurus-highlight-code-line {
+html[data-theme="dark"] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+* {
+  font-family: "Spoqa Han Sans Neo", "sans-serif";
 }
